updated swagger spec
